--- a/compiled.css
+++ b/compiled.css
@@ -1,3 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  height: 800px;
+  font-family: "Open Sans", sans-serif;
+  background-image: url("./images/bg-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: #674baf;
+  padding: 60px 70px;
+}
+body header img {
+  height: 40px;
+}
 
 /*# sourceMappingURL=compiled.css.map */
