--- a/compiled.css
+++ b/compiled.css
@@ -7,6 +7,7 @@
 body {
   height: 800px;
   font-family: "Open Sans", sans-serif;
+  font-size: 16px;
   background-image: url("./images/bg-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,6 +17,46 @@ body {
 }
 body header img {
   height: 40px;
+  margin-bottom: 100px;
+}
+body main {
+  height: 500px;
+}
+body main .left {
+  float: left;
+  width: 50%;
+  height: 100%;
+  background-image: url("./images/illustration-mockups.svg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+}
+body main .right {
+  float: right;
+  width: 50%;
+  height: 100%;
+  padding: 60px;
+  color: #fff;
+}
+body main .right h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+body main .right p {
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+body main .right button {
+  width: 200px;
+  height: 60px;
+  border: none;
+  border-radius: 30px;
+  color: #674baf;
+  font-size: 1rem;
+  font-weight: 400;
+  box-shadow: 2px 2px 10px #000;
 }
 
 /*# sourceMappingURL=compiled.css.map */
