--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -26,6 +26,7 @@ sans-serif;
 body {
     height: 800px;
     font-family: $body-font-family;
+    font-size: 16px;
     background-image: url("./images/bg-desktop.svg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,6 +37,54 @@ body {
     header {
         img {
             height: 40px;
+            margin-bottom: 100px;
+        }
+    }
+    
+    main {
+        height: 500px;
+        
+        .left {
+            float: left;
+            width: 50%;
+            height: 100%;
+            
+            background-image: url("./images/illustration-mockups.svg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-position: center;
+        }
+        
+        .right {
+            float: right;
+            width: 50%;
+            height: 100%;
+            
+            padding: 60px;
+            color: #fff;
+            
+            h1 {
+                font-family: $heading-font-family;
+                font-size: 2.5rem;
+                font-weight: 700;
+                margin-bottom: 10px;
+            }
+            
+            p {
+                line-height: 30px;
+                margin-bottom: 30px;
+            }
+            
+            button {
+                width: 200px;
+                height: 60px;
+                border: none;
+                border-radius: 30px;
+                color: $Violet;
+                font-size: 1rem;
+                font-weight: 400;
+                box-shadow: 2px 2px 10px #000;
+            }
         }
     }
 }
