--- a/compiled.css
+++ b/compiled.css
@@ -58,5 +58,17 @@ body main .right button {
   font-weight: 400;
   box-shadow: 2px 2px 10px #000;
 }
+body footer {
+  text-align: right;
+  padding-top: 30px;
+}
+body footer img {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  margin: 0 8px;
+  padding: 8px;
+}
 
 /*# sourceMappingURL=compiled.css.map */
