--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -87,4 +87,18 @@ body {
             }
         }
     }
+    
+    footer {
+        text-align: right;
+        padding-top: 30px;
+        
+        img {
+            width: 40px;
+            height: 40px;
+            border: 1px solid #fff;
+            border-radius: 100%;
+            margin: 0 8px;
+            padding: 8px;
+        }
+    }
 }
