--- a/compiled.css
+++ b/compiled.css
@@ -71,4 +71,38 @@ body footer img {
   padding: 8px;
 }
 
+@media screen and (max-width: 1100px) and (min-width: 350px) {
+  body {
+    height: 1600px;
+    padding: 70px;
+  }
+  body header img {
+    height: 50px;
+    margin-bottom: 130px;
+  }
+  body main .left {
+    float: none;
+    width: 100%;
+    height: 420px;
+    margin-bottom: 140px;
+  }
+  body main .right {
+    float: none;
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
+  body main .right p {
+    font-size: 1.6rem;
+    line-height: 40px;
+    margin: 50px 0;
+  }
+  body main .right button {
+    width: 70%;
+    height: 90px;
+    border-radius: 45px;
+    font-size: 1.6rem;
+  }
+}
+
 /*# sourceMappingURL=compiled.css.map */
