--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -102,3 +102,46 @@ body {
         }
     }
 }
+
+@media screen and (max-width:1100px) and (min-width: 350px) {
+    body {
+        height: 1600px;
+        padding: 70px;
+        
+        header {
+            img {
+                height: 50px;
+                margin-bottom: 130px;
+            }
+        }
+        
+        main {
+            .left {
+                float: none;
+                width: 100%;
+                height: 420px;
+                margin-bottom: 140px;
+            }
+            
+            .right {
+                float: none;
+                width: 100%;
+                padding: 0;
+                text-align: center;
+                
+                p {
+                    font-size: 1.6rem;
+                    line-height: 40px; 
+                    margin: 50px 0;
+                }
+                
+                button {
+                    width: 70%;
+                    height: 90px;
+                    border-radius: 45px;
+                    font-size: 1.6rem;
+                }
+            }
+        }
+    }
+}
