--- a/compiled.css
+++ b/compiled.css
@@ -71,10 +71,11 @@ body footer img {
   padding: 8px;
 }
 
-@media screen and (max-width: 1100px) and (min-width: 350px) {
+@media (max-width: 1100px) {
   body {
     height: 1600px;
     padding: 70px;
+    background-image: url("./images/bg-mobile.svg");
   }
   body header img {
     height: 50px;
@@ -89,6 +90,7 @@ body footer img {
   body main .right {
     float: none;
     width: 100%;
+    height: auto;
     padding: 0;
     text-align: center;
   }
@@ -102,6 +104,16 @@ body footer img {
     height: 90px;
     border-radius: 45px;
     font-size: 1.6rem;
+  }
+  body footer {
+    text-align: center;
+    padding-top: 750px;
+  }
+  body footer img {
+    width: 60px;
+    height: 60px;
+    margin: 0 10px;
+    padding: 10px;
   }
 }
 
