--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -33,48 +33,48 @@ body {
     background-position: center;
     background-color: $Violet;
     padding: 60px 70px;
-    
+
     header {
         img {
             height: 40px;
             margin-bottom: 100px;
         }
     }
-    
+
     main {
         height: 500px;
-        
+
         .left {
             float: left;
             width: 50%;
             height: 100%;
-            
+
             background-image: url("./images/illustration-mockups.svg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-position: center;
         }
-        
+
         .right {
             float: right;
             width: 50%;
             height: 100%;
-            
+
             padding: 60px;
             color: #fff;
-            
+
             h1 {
                 font-family: $heading-font-family;
                 font-size: 2.5rem;
                 font-weight: 700;
                 margin-bottom: 10px;
             }
-            
+
             p {
                 line-height: 30px;
                 margin-bottom: 30px;
             }
-            
+
             button {
                 width: 200px;
                 height: 60px;
@@ -87,11 +87,11 @@ body {
             }
         }
     }
-    
+
     footer {
         text-align: right;
         padding-top: 30px;
-        
+
         img {
             width: 40px;
             height: 40px;
@@ -103,18 +103,19 @@ body {
     }
 }
 
-@media screen and (max-width:1100px) and (min-width: 350px) {
+@media (max-width:1100px) {
     body {
         height: 1600px;
         padding: 70px;
-        
+        background-image: url("./images/bg-mobile.svg");
+
         header {
             img {
                 height: 50px;
                 margin-bottom: 130px;
             }
         }
-        
+
         main {
             .left {
                 float: none;
@@ -122,25 +123,38 @@ body {
                 height: 420px;
                 margin-bottom: 140px;
             }
-            
+
             .right {
                 float: none;
                 width: 100%;
+                height: auto;
                 padding: 0;
                 text-align: center;
-                
+
                 p {
                     font-size: 1.6rem;
-                    line-height: 40px; 
+                    line-height: 40px;
                     margin: 50px 0;
                 }
-                
+
                 button {
                     width: 70%;
                     height: 90px;
                     border-radius: 45px;
                     font-size: 1.6rem;
                 }
+            }
+        }
+
+        footer {
+            text-align: center;
+            padding-top: 750px;
+
+            img {
+                width: 60px;
+                height: 60px;
+                margin: 0 10px;
+                padding: 10px;
             }
         }
     }
